--- a/ChapterThree.tex
+++ b/ChapterThree.tex
@@ -421,7 +421,7 @@ The mount of the pyramid optic has a custom target that aligns with the pyramid 
 
 \begin{figure}
     \centering
-    \includegraphics{Chapter Materials/Chapter Three Materials/Age 170.668.jpeg}
+    \includegraphics[width=.8\textwidth]{Chapter Materials/Chapter Three Materials/Age 170.668.jpeg}
     \caption{Caption}
     \label{fig:fitPupils}
 \end{figure}
